--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en">
+<Repellat, class="no-js" lang="en">
 
 <head>
     <title>Bootstrap 4 Layout</title>
@@ -13,11 +13,99 @@
 </head>
 
 <body>
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <a href="#" class="navbar-brand">Company Name</a>     
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown">Products</a>
+                        <div class="dropdown-menu">
+                            <a href="#" class="dropdown-item">Product 1</a>
+                            <a href="#" class="dropdown-item">Product 2</a>
+                            <div class="dropdown-divider"></div>
+                            <a href="#" class="dropdown-item">Product 3</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Contacts</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="jumbotron">
+            <h1 class="display-4 text-sm-center text-md-left">Simple. Elegant. Awesome.</h1>
+            <p class="lead text-sm-center text-md-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ducimus ut aliquid recusandae sequi consequatur ipsum perferendis eaque rem cum libero iste, corrupti voluptatem voluptate autem quos facere est! Quidem?</p>
+            <p class="lead text-sm-center text-md-left">
+                <a href="#" class="btn btn-primary btn-lg">Learn More</a>
+            </p>
+        </div>
+
+        <div class="row mt-sm-4 mt-md-0 mb-sm-4 mb-md-4">
+            <div class="col-sm-12 col-md-8 text-sm-center text-md-left">
+                <h3>An important heading</h3>
+                <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Quos, ex omnis. Repellat, eligendi tempore, voluptatum sapiente beatae aspernatur nam explicabo pariatur vel distinctio temporibus nesciunt quos officiis deserunt quas rem. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque corporis ipsa nam dolore unde. Consequatur alias odit, enim et quos, aliquam exercitationem beatae fugit rerum esse a perferendis modi aperiam.</p> 
+                <p>Atque corporis ipsa nam dolore unde. Consequatur alias odit, enim et quos, aliquam exercitationem beatae fugit rerum esse a perferendis modi aperiam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque corporis ipsa nam dolore unde. Consequatur alias odit, enim et quos, aliquam exercitationem beatae fugit rerum esse a perferendis modi aperiam.</p>                 
+            </div>
+            <div class="col-sm-12 col-md-4 text-sm-center text-md-left">
+                <h3 class="mb-4 ">Secondary Menu</h3>
+                <ul class="nav flex-column  nav-pills">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link active">Active</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link ">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link disabled">Disabled</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-sm-12">
+                <div class="card mb-sm-4">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Texas</h5>
+                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque corporis ipsa nam dolore unde. Consequatur alias odit, enim et quos, aliquam exercitationem beatae fugit rerum esse a perferendis modi aperiam.</p>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Texas</h5>
+                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque corporis ipsa nam dolore unde. Consequatur alias odit, enim et quos, aliquam exercitationem beatae fugit rerum esse a perferendis modi aperiam.</p>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Texas</h5>
+                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque corporis ipsa nam dolore unde. Consequatur alias odit, enim et quos, aliquam exercitationem beatae fugit rerum esse a perferendis modi aperiam.</p>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
+            </div>           
+        </div>
+    </div>
+
     <script src="../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../node_modules/popper.js/dist/popper.min.js"></script>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
-    <div class="rounded-circle">
-        Yeah!
-    </div>
 </body>
