--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,39 @@
             </p>
         </div>
 
+        
+
+
+        <div class="row">
+            <div class="col-md-4 col-sm-12">
+                <div class="card mb-sm-4">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Texas</h5>
+                        <p class="card-text">Atque corporis ipsa nam dolore unde. Consequatur alias odit, enim et quos, aliquam exercitationem beatae fugit rerum esse a perferendis modi aperiam.</p>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Texas</h5>
+                        <p class="card-text">Atque corporis ipsa nam dolore unde. Consequatur alias odit, enim et quos, aliquam exercitationem beatae fugit rerum esse a perferendis modi aperiam.</p>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Texas</h5>
+                        <p class="card-text">Atque corporis ipsa nam dolore unde. Consequatur alias odit, enim et quos, aliquam exercitationem beatae fugit rerum esse a perferendis modi aperiam.</p>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
+            </div>           
+        </div>
+
         <div class="row mt-sm-4 mt-md-0 mb-sm-4 mb-md-4">
             <div class="col-sm-12 col-md-8 text-sm-center text-md-left">
                 <h3>An important heading</h3>
@@ -73,35 +106,6 @@
                     </li>
                 </ul>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4 col-sm-12">
-                <div class="card mb-sm-4">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Texas</h5>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque corporis ipsa nam dolore unde. Consequatur alias odit, enim et quos, aliquam exercitationem beatae fugit rerum esse a perferendis modi aperiam.</p>
-                        <a href="#" class="card-link">Another link</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="card">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Texas</h5>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque corporis ipsa nam dolore unde. Consequatur alias odit, enim et quos, aliquam exercitationem beatae fugit rerum esse a perferendis modi aperiam.</p>
-                        <a href="#" class="card-link">Another link</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="card">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Texas</h5>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque corporis ipsa nam dolore unde. Consequatur alias odit, enim et quos, aliquam exercitationem beatae fugit rerum esse a perferendis modi aperiam.</p>
-                        <a href="#" class="card-link">Another link</a>
-                    </div>
-                </div>
-            </div>           
         </div>
     </div>
 
